added - README.md

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://kit.fontawesome.com/caa6f5fded.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Challenge • Home</title>
+
+    <!-- Links/Imports -->
+
+    <script src="https://kit.fontawesome.com/caa6f5fded.js" crossorigin="anonymous"></script> <!-- Imports Fontawesome Kit(s)/Icon(s) -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=anaglyph|brick-sign|canvas-print|crackle|decaying|destruction|distressed|distressed-wood|emboss|fire|fire-animation|fragile|grass|ice|mitosis|neon|outline|putting-green|scuffed-steel|shadow-multiple|splintered|static|stonewash|3d|3d-float|vintage|wallpaper"> <!-- Imports Google Fonts API (Font: Rancho, All Effects) -->
+    <link rel="stylesheet" href="style.css"> <!-- Imports the "style.css" file -->
+
+    <!-- Title -->
+
+    <title>Template • Home</title>
+
+    <!-- Here comes your content -->
+
 </head>
 <body>
     <header>
         <div class="navbar">
 
             <div>
-                <a href="index.html">BRAND</a>
+                <a class="font-effect-anaglyph" href="index.html">BRAND</a>
             </div>
 
         </div>
@@ -35,6 +45,8 @@
           </ul>
         </div>
       </div>
+
       <!-- Here comes your content -->
+
 </body>
 </html>
